--- a/client/lib/dataTables.materialize.css
+++ b/client/lib/dataTables.materialize.css
@@ -1,3 +1,7 @@
+.dataTables_length {
+  display: none;
+}
+
 div.dataTables_length label {
 	font-weight: normal;
 	float: left;
@@ -10,7 +14,7 @@ div.dataTables_length select {
 
 div.dataTables_filter label {
 	font-weight: normal;
-	float: right;
+	float: none;
 }
 
 div.dataTables_filter input {
@@ -54,12 +58,12 @@ table.dataTable thead .sorting_desc_disabled {
 	cursor: pointer;
 }
 
-table.dataTable thead .sorting { background: url('/packages/aldeed_tabular/images/sort_both.png') no-repeat center right; }
-table.dataTable thead .sorting_asc { background: url('/packages/aldeed_tabular/images/sort_asc.png') no-repeat center right; }
-table.dataTable thead .sorting_desc { background: url('/packages/aldeed_tabular/images/sort_desc.png') no-repeat center right; }
+table.dataTable thead .sorting { background: url('/packages/nicolaslopezj_tabular-materialize/images/sort_both.png') no-repeat center right; }
+table.dataTable thead .sorting_asc { background: url('/packages/nicolaslopezj_tabular-materialize/images/sort_asc.png') no-repeat center right; }
+table.dataTable thead .sorting_desc { background: url('/packages/nicolaslopezj_tabular-materialize/images/sort_desc.png') no-repeat center right; }
 
-table.dataTable thead .sorting_asc_disabled { background: url('/packages/aldeed_tabular/images/sort_asc_disabled.png') no-repeat center right; }
-table.dataTable thead .sorting_desc_disabled { background: url('/packages/aldeed_tabular/images/sort_desc_disabled.png') no-repeat center right; }
+table.dataTable thead .sorting_asc_disabled { background: url('/packages/nicolaslopezj_tabular-materialize/images/sort_asc_disabled.png') no-repeat center right; }
+table.dataTable thead .sorting_desc_disabled { background: url('/packages/nicolaslopezj_tabular-materialize/images/sort_desc_disabled.png') no-repeat center right; }
 
 table.dataTable thead > tr > th {
 	padding-left: 18px;
